<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="label">PinDroid</string>
    <string name="pindroid">PinDroid</string>
    <string name="ui_activity_title">Sign in</string>
    <string name="ui_activity_authenticating">Authenticating</string>
    <string name="login_activity_username_label">Username</string>
    <string name="login_activity_password_label">Password</string>
    <string name="login_activity_ok_button">Sign in</string>
    <string name="login_activity_loginfail_text_both">The username or password isn\'t valid. A Pinboard account is
        required. Please try again. </string>
    <string name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <string name="login_activity_loginfail_text_pwmissing">Enter the password for your Pinboard account.</string>
    <string name="login_main_text">Sign in to your Pinboard account</string>
    <string name="login_bottom_text">Don\'t have a Pinboard account?  Sign up at http://pinboard.in/signup</string>
    <string name="titleMain">Pinboard</string>
    <string name="share_menu_add_bookmark">Pinboard - Add Bookmark</string>
    <string name="share_menu_read_later">Pinboard - Read Later</string>
    <string name="login_no_account">No Pinboard Account Setup</string>
    <string name="save_later_saved">Bookmark Saved</string>
    <string name="main_menu_my_header">My Pinboard</string>
    <string name="main_menu_my_bookmarks">Bookmarks</string>
    <string name="main_menu_my_unread_bookmarks">Unread</string>
    <string name="main_menu_my_untagged">Untagged</string>
    <string name="main_menu_my_tags">Tags</string>
    <string name="main_menu_my_notes">Notes</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_feeds_header">Feeds</string>
    <string name="main_menu_network_bookmarks">Network</string>
    <string name="main_menu_recent_bookmarks">Recent</string>
    <string name="main_menu_popular_bookmarks">Popular</string>
    <string name="main_menu_tags_header">Tags</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="main_search_results_title">Search Results</string>
    <string name="browse_my_bookmarks_title">Bookmarks</string>
    <string name="browse_my_unread_bookmarks_title">Unread Bookmarks</string>
    <string name="browse_my_untagged_bookmarks_title">Untagged Bookmarks</string>
    <string name="browse_my_bookmarks_tagged_title">%1$s</string>
    <string name="browse_my_unread_bookmarks_tagged_title">Unread %1$s</string>
    <string name="browse_recent_bookmarks_title">Recent Bookmarks</string>
    <string name="browse_popular_bookmarks_title">Popular Bookmarks</string>
    <string name="browse_network_bookmarks_title">Network Bookmarks</string>
    <string name="browse_user_bookmarks_title">Bookmarks For %1$s</string>
    <string name="browse_user_bookmarks_tagged_title">Bookmarks For %1$s Tagged With %2$s</string>
    <string name="bookmark_context_open">Open in browser</string>
    <string name="bookmark_context_view">View Details</string>
    <string name="bookmark_context_read">Read</string>
    <string name="bookmark_context_markread">Mark as Read</string>
    <string name="bookmark_context_edit">Edit</string>
    <string name="bookmark_context_delete">Delete</string>
    <string name="bookmark_context_share">Share</string>
    <string name="bookmark_context_add">Add</string>
    <string name="share_chooser_title">Share link</string>
    <string name="bookmark_sort_date_asc">Date (Oldest First)</string>
    <string name="bookmark_sort_date_desc">Date (Newest First)</string>
    <string name="bookmark_sort_description_asc">Description (A-Z)</string>
    <string name="bookmark_sort_description_desc">Description (Z-A)</string>
    <string name="bookmark_sort_url_asc">Url (A-Z)</string>
    <string name="bookmark_sort_url_desc">Url (Z-A)</string>
    <string name="menu_addbookmark_title">Add Bookmark</string>
    <string name="menu_sort_bookmark_title">Sort Bookmarks</string>
    <string name="menu_sort_tag_title">Sort Tags</string>
    <string name="menu_search_title">Search</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_choose_account_title">Change Account</string>
    <string name="bookmark_unsynced_alt">Unsynced Indicator</string>
    <string name="bookmark_unread_alt">Unread Indicator</string>
    <string name="bookmark_empty_text">You have no bookmarks</string>
    <string name="unread_empty_text">You have no unread bookmarks</string>
    <string name="browse_my_tags_title">My Tags</string>
    <string name="tag_sort_name_asc">Name (A-Z)</string>
    <string name="tag_sort_name_desc">Name (Z-A)</string>
    <string name="tag_sort_count_asc">Count (Least First)</string>
    <string name="tag_sort_count_desc">Count (Most First)</string>
    <string name="select_tags_activity_title">Select Tags</string>
    <string name="browse_my_notes_title">Notes</string>
    <string name="add_bookmark_add_title">Add Bookmark</string>
    <string name="add_bookmark_edit_title">Edit Bookmark</string>
    <string name="add_bookmark_default_title">[no title]</string>
    <string name="add_button_save">Save</string>
    <string name="add_button_cancel">Cancel</string>
    <string name="add_title_url">URL</string>
    <string name="add_title_description">Description</string>
    <string name="menu_view_title">View</string>
    <string name="menu_view_read_title">Read</string>
    <string name="menu_view_details_title">Details</string>
    <string name="menu_view_openbookmark_title">Web</string>
    <string name="menu_view_editbookmark_title">Edit</string>
    <string name="menu_view_deletebookmark_title">Delete</string>
    <string name="menu_view_sendbookmark_title">Share</string>
    <string name="pref_cat_general_title">General settings</string>
    <string name="pref_cat_sync_title">Sync settings</string>
    <string name="pref_cat_save_title">Save settings</string>
    <string name="pref_cat_reading_title">Reading options</string>
    <string name="pref_cat_help_title">Help</string>
    <string name="pref_accountsettings_title">Account settings</string>
    <string name="pref_accountsettings_key" translatable="false">pref_accountsettings</string>
    <string name="pref_accountsettings_summary">Manage your Pinboard account on this device.</string>
    <string name="pref_synctime_title">Sync frequency</string>
    <string name="pref_synctime_key" translatable="false">pref_synctime</string>
    <string name="pref_synctime_summary">How often to sync bookmarks.</string>
    <string name="pref_view_bookmark_default_action_title">Bookmark action</string>
    <string name="pref_view_bookmark_default_action_key" translatable="false">pref_view_bookmark_default_action</string>
    <string name="pref_view_bookmark_default_action_summary">Default action for bookmarks.</string>
    <string name="pref_usebrowser_title">Open links in browser</string>
    <string name="pref_usebrowser_key">pref_usebrowser</string>
    <string name="pref_usebrowser_summary_off">Use internal browser when possible.</string>
    <string name="pref_usebrowser_summary_on">Always open web links in browser app.</string>
    <string name="pref_usebrowser_switch_off">No</string>
    <string name="pref_usebrowser_switch_on">Yes</string>
    <string name="pref_searchicons_title">Display search icons</string>
    <string name="pref_searchicons_key" translatable="false">pref_searchicons</string>
    <string name="pref_searchicons_summary_off">Don\'t display icons in search suggestions.</string>
    <string name="pref_searchicons_summary_on">Display icons in search suggestions.</string>
    <string name="pref_searchicons_switch_off">No</string>
    <string name="pref_searchicons_switch_on">Yes</string>
    <string name="pref_save_private_default_title">Private default</string>
    <string name="pref_save_private_default_key" translatable="false">pref_save_private_default</string>
    <string name="pref_save_private_default_summary_off">Set new bookmarks as public by default.</string>
    <string name="pref_save_private_default_summary_on">Set new bookmarks as private by default.</string>
    <string name="pref_save_private_default_switch_off">No</string>
    <string name="pref_save_private_default_switch_on">Yes</string>
    <string name="pref_save_toread_default_title">Unread default</string>
    <string name="pref_save_toread_default_key" translatable="false">pref_save_toread_default</string>
    <string name="pref_save_toread_default_summary_off">Set new bookmarks as read by default.</string>
    <string name="pref_save_toread_default_summary_on">Set new bookmarks as unread by default.</string>
    <string name="pref_save_toread_default_switch_off">No</string>
    <string name="pref_save_toread_default_switch_on">Yes</string>
    <string name="pref_markasread_title">Mark as read</string>
    <string name="pref_markasread_key" translatable="false">pref_markasread</string>
    <string name="pref_markasread_summary_off">Leave unread bookmarks unread when you read them.</string>
    <string name="pref_markasread_summary_on">Mark unread bookmarks as read when you read them.</string>
    <string name="pref_markasread_switch_off">No</string>
    <string name="pref_markasread_switch_on">Yes</string>
    <string name="pref_drawertags_title">Drawer tags</string>
    <string name="pref_drawertags_summary">Choose which tags to display in navigation drawer.</string>
    <string name="pref_forcesync_title">Sync now</string>
    <string name="pref_forcesync_key" translatable="false">pref_forcesync</string>
    <string name="pref_forcesync_summary">Start a bookmark sync.</string>
    <string name="pref_reading_background_title">Background</string>
    <string name="pref_reading_background_key" translatable="false">pref_reading_background</string>
    <string name="pref_reading_background_summary">Background color in read view</string>
    <string name="pref_reading_font_title">Font</string>
    <string name="pref_reading_font_key" translatable="false">pref_reading_font</string>
    <string name="pref_reading_font_summary">Font for read view</string>
    <string name="pref_reading_fontsize_title">Font size</string>
    <string name="pref_reading_fontsize_key" translatable="false">pref_reading_fontsize</string>
    <string name="pref_reading_fontsize_summary">Font size for read view</string>
    <string name="pref_reading_margins_title">Margin size</string>
    <string name="pref_reading_margins_key" translatable="false">pref_reading_margins</string>
    <string name="pref_reading_margins_summary">Margin width for read view</string>
    <string name="pref_license_title">License</string>
    <string name="pref_license_key" translatable="false">pref_license</string>
    <string name="pref_license_summary">Licensed under the GPL v3</string>
    <string name="pref_help_title">Help</string>
    <string name="pref_help_key" translatable="false">pref_help</string>
    <string name="pref_help_summary">Help on using PinDroid</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_key" translatable="false">pref_about</string>
    <string name="pref_about_summary">About PinDroid</string>
    <string name="pref_donate_title">Donate</string>
    <string name="pref_donate_key" translatable="false">pref_donate</string>
    <string name="pref_donate_summary">Support PinDroid</string>
    <string name="alt_widget_main">PinDroid</string>
    <string name="alt_widget_my_bookmarks">My Bookmarks</string>
    <string name="alt_widget_unread_bookmarks">Unread Bookmarks</string>
    <string name="alt_widget_unread_bookmark_count">Unread Bookmark Count</string>
    <string name="alt_widget_add_bookmark">Add Bookmark</string>
</resources>