<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * PinDroid - http://code.google.com/p/PinDroid/
 *
 * Copyright (C) 2010 Matt Schmidt
 *
 * PinDroid is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published
 * by the Free Software Foundation; either version 3 of the License,
 * or (at your option) any later version.
 *
 * PinDroid is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with PinDroid; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
 * USA
 */
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_cat_general_title">
        <ListPreference
            android:title="@string/pref_view_bookmark_default_action_title"
            android:summary="@string/pref_view_bookmark_default_action_summary"
            android:key="@string/pref_view_bookmark_default_action_key"
            android:entries="@array/pref_view_bookmark_default_action_entries"
            android:entryValues="@array/pref_view_bookmark_default_action_values"
            android:defaultValue="browser" />
        <SwitchPreference
            android:title="@string/pref_usebrowser_title"
            android:defaultValue="false"
            android:switchTextOff="@string/pref_usebrowser_switch_off"
            android:switchTextOn="@string/pref_usebrowser_switch_on"
            android:summaryOff="@string/pref_usebrowser_summary_off"
            android:summaryOn="@string/pref_usebrowser_summary_on"
            android:key="@string/pref_usebrowser_key" />
        <SwitchPreference
            android:title="@string/pref_searchicons_title"
            android:defaultValue="true"
            android:switchTextOff="@string/pref_searchicons_switch_off"
            android:switchTextOn="@string/pref_searchicons_switch_on"
            android:summaryOff="@string/pref_searchicons_summary_off"
            android:summaryOn="@string/pref_searchicons_summary_on"
            android:key="@string/pref_searchicons_key" />
        <SwitchPreference
            android:title="@string/pref_markasread_title"
            android:defaultValue="false"
            android:switchTextOff="@string/pref_markasread_switch_off"
            android:switchTextOn="@string/pref_markasread_switch_on"
            android:summaryOff="@string/pref_markasread_summary_off"
            android:summaryOn="@string/pref_markasread_summary_on"
            android:key="@string/pref_markasread_key" />
        <Preference
            android:title="@string/pref_drawertags_title"
            android:summary="@string/pref_drawertags_summary">
            <intent android:targetClass="com.pindroid.activity.SelectTags" android:targetPackage="com.pindroid" android:action="android.intent.action.PICK"/>
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_cat_sync_title">
        <Preference
            android:title="@string/pref_accountsettings_title"
            android:summary="@string/pref_accountsettings_summary"
            android:key="@string/pref_accountsettings_key" />
        <Preference
            android:title="@string/pref_forcesync_title"
            android:summary="@string/pref_forcesync_summary"
            android:key="@string/pref_forcesync_key" />
        <ListPreference
            android:title="@string/pref_synctime_title"
            android:summary="@string/pref_synctime_summary"
            android:key="@string/pref_synctime_key"
            android:entries="@array/pref_synctime_entries"
            android:entryValues="@array/pref_synctime_values"
            android:defaultValue="0" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_cat_save_title">
        <SwitchPreference
            android:title="@string/pref_save_private_default_title"
            android:defaultValue="false"
            android:switchTextOff="@string/pref_save_private_default_switch_off"
            android:switchTextOn="@string/pref_save_private_default_switch_on"
            android:summaryOff="@string/pref_save_private_default_summary_off"
            android:summaryOn="@string/pref_save_private_default_summary_on"
            android:key="@string/pref_save_private_default_key" />
        <SwitchPreference
            android:title="@string/pref_save_toread_default_title"
            android:defaultValue="false"
            android:switchTextOff="@string/pref_save_toread_default_switch_off"
            android:switchTextOn="@string/pref_save_toread_default_switch_on"
            android:summaryOff="@string/pref_save_toread_default_summary_off"
            android:summaryOn="@string/pref_save_toread_default_summary_on"
            android:key="@string/pref_save_toread_default_key" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_cat_reading_title">
        <ListPreference
            android:title="@string/pref_reading_background_title"
            android:entries="@array/pref_reading_background_entries"
            android:entryValues="@array/pref_reading_background_values"
            android:defaultValue="lightmode"
            android:summary="@string/pref_reading_background_summary"
            android:key="@string/pref_reading_background_key" />
        <ListPreference
            android:title="@string/pref_reading_fontsize_title"
            android:entries="@array/pref_reading_fontsize_entries"
            android:entryValues="@array/pref_reading_fontsize_values"
            android:defaultValue="3"
            android:summary="@string/pref_reading_fontsize_summary"
            android:key="@string/pref_reading_fontsize_key" />
        <ListPreference
            android:title="@string/pref_reading_font_title"
            android:entries="@array/pref_reading_font_entries"
            android:entryValues="@array/pref_reading_font_values"
            android:defaultValue="georgiamode"
            android:summary="@string/pref_reading_font_summary"
            android:key="@string/pref_reading_font_key" />
        <ListPreference
            android:title="@string/pref_reading_margins_title"
            android:entries="@array/pref_reading_margins_entries"
            android:entryValues="@array/pref_reading_margins_values"
            android:defaultValue="medwidthmode"
            android:summary="@string/pref_reading_margins_summary"
            android:key="@string/pref_reading_margins_key" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_cat_help_title">
        <Preference
            android:title="@string/pref_about_title"
            android:summary="@string/pref_about_summary"
            android:key="@string/pref_about_key" />
        <Preference
            android:title="@string/pref_help_title"
            android:summary="@string/pref_help_summary"
            android:key="@string/pref_help_key" />
        <Preference
            android:title="@string/pref_license_title"
            android:summary="@string/pref_license_summary"
            android:key="@string/pref_license_key" />
        <Preference
            android:title="@string/pref_donate_title"
            android:summary="@string/pref_donate_summary"
            android:key="@string/pref_donate_key" />
    </PreferenceCategory>
</PreferenceScreen>
