<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * PinDroid - http://code.google.com/p/PinDroid/
 *
 * Copyright (C) 2010 Matt Schmidt
 *
 * PinDroid is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published
 * by the Free Software Foundation; either version 3 of the License,
 * or (at your option) any later version.
 *
 * PinDroid is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with PinDroid; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
 * USA
 */
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item 
		android:id="@+id/menu_bookmark_context_open" 
		android:title="@string/bookmark_context_open" />
	<item 
		android:id="@+id/menu_bookmark_context_view" 
		android:title="@string/bookmark_context_view" />
	<item 
		android:id="@+id/menu_bookmark_context_read" 
		android:title="@string/bookmark_context_read" />
	<item 
		android:id="@+id/menu_bookmark_context_markread" 
		android:title="@string/bookmark_context_markread" />
	<item 
		android:id="@+id/menu_bookmark_context_edit" 
		android:title="@string/bookmark_context_edit" />
	<item 
		android:id="@+id/menu_bookmark_context_delete" 
		android:title="@string/bookmark_context_delete" />
	<item 
		android:id="@+id/menu_bookmark_context_share" 
		android:title="@string/bookmark_context_share" />
</menu>
